test/files/neg/macro-invalidsig-context-bounds.check
Impls_1.scala:5: error: macro implementations cannot have implicit parameters other than AbsTypeTag evidences
  def foo[U: c.AbsTypeTag: Numeric](c: Ctx) = {
      ^
one error found
